Fix obelisks spawning in every biome